--- a/styles/home.scss
+++ b/styles/home.scss
@@ -83,3 +83,9 @@
       padding: 0 10px;
       text-decoration: none;
     }
+
+    .navbar .userCount {
+      float: right;
+      font-size: 18px;
+      margin-top: 20px;
+    }
