--- a/styles/home.scss
+++ b/styles/home.scss
@@ -7,7 +7,7 @@
     }
 
     .chatbar {
-      background: tomato;
+      background: #37822B;
       border-top: 1px solid black;
       bottom: 0;
       display: flex;
@@ -62,7 +62,7 @@
     }
 
     .navbar {
-      background: tomato;
+      background: #37822B;
       border-bottom: 1px solid black;
       height: 60px;
       left: 0;
